--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<title>my exam</title>
-  <link rel="stylesheet" type="text/css"  href="examstyl.css">
+  <link rel="stylesheet" type="text/css"  href="mystyle.css">
 
 </head>
 <body>
