--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>my exam</title>
-  <link rel="stylesheet" type="text/css"  href="mystyle.css">
+	<title>module-2 index</title>
+  <link rel="stylesheet" type="text/css"  href="css/mystyle.css">
 
 </head>
 <body>
