--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<title>module-2 index</title>
-  <link rel="stylesheet" type="text/css"  href="/css/mystyle.css">
+  <link rel="stylesheet" type="text/css"  href="css/mystyle.css">
 
 </head>
 <body>
