--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -40,7 +40,7 @@ Enjoy the fresh taste of zucchini, lightly sauteed in oil and draped with a garl
 
 
 
-<div class="div1">dABO</div>
+<div class="div1">steak</div>
 <div class="p1"> 
 Enjoy the fresh taste of zucchini, lightly sauteed in oil and draped with a garlicy cream sauce. Toss with hot pasta and Parmesan cheese, then serve immediately with more cheese grated on top.
 </div>
