--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,15 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>module-2 index</title>
-  <link rel="stylesheet" type="text/css"  href="css/mystyle.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>module-2</title>
+  <link rel="stylesheet" type="text/css"  href="examstyl.css">
 
 </head>
 <body>
 	
-<h1>our burger</h1>
+<h1>our menu</h1>
 
-<div id="cont">
+
+
+
+<div style="width:100%">
 
 
 <div class="cont1" >
@@ -25,9 +29,9 @@ Enjoy the fresh taste of zucchini, lightly sauteed in oil and draped with a garl
 </div>
 
 
-<div class="cont1" >
+<div class="cont2" >
 
-<div class="div1">enjera</div>
+<div class="div2">lasagna</div>
 <div class="p1"> 
 Enjoy the fresh taste of zucchini, lightly sauteed in oil and draped with a garlicy cream sauce. Toss with hot pasta and Parmesan cheese, then serve immediately with more cheese grated on top.
 </div>
@@ -36,21 +40,21 @@ Enjoy the fresh taste of zucchini, lightly sauteed in oil and draped with a garl
 
 
 
-<div class="cont1">
+<div class="cont3">
 
 
 
-<div class="div1">steak</div>
+<div class="div3">steak</div>
 <div class="p1"> 
 Enjoy the fresh taste of zucchini, lightly sauteed in oil and draped with a garlicy cream sauce. Toss with hot pasta and Parmesan cheese, then serve immediately with more cheese grated on top.
 </div>
 
 </div>
 
-
-
-
 </div>
+
+
+
 
 
 
