--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>module-2</title>
-  <link rel="stylesheet" type="text/css"  href="examstyl.css">
+  <link rel="stylesheet" type="text/css"  href="css/examstyl.css">
 
 </head>
 <body>
