--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -11,7 +11,7 @@
 	
 <h1>our menu</h1>
 
-
+<div class="container">
 
 
 <div style="width:100%">
@@ -61,7 +61,7 @@ Enjoy the fresh taste of zucchini, lightly sauteed in oil and draped with a garl
 
 
 
-
+	</div>
 
 </body>
 </html>
