--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head> 
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=divice-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>modul-3</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
