--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>modul-3</title>
+	<title>module-3</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
